# WCE-Sequences-Thesis

./: .gitattributes  .gitignore  README.md  Sigma_Correlation_Summary.csv  VisualizeResults.py  abnormal_words.py  create_img_folder.py  gris:gris-f:homestud:pbatho.textClipping  new_hdbscan_validity.py  normal_clean_mucosa copy.mov  pyproject.toml  svg_to_png.py  word_count.py
Summaries/: TemporalPurities.csv
Summaries/Mean/: Mean_Validation_Metrics_Summary_for_All_Models__Sigma0.csv  Mean_Validation_Metrics_Summary_for_All_Models__Sigma100_.csv  Mean_Validation_Metrics_Summary_for_All_Models__Sigma10_.csv  Mean_Validation_Metrics_Summary_for_All_Models__Sigma1_.csv  (+4 more)
src/: accuracy_with_anomalies_best_performances.csv  autosplit.ipynb  best_accuracy_with_anomalies_table.tex  best_performances.csv  best_performances_ari_with_anomalies.csv  best_performances_nmi_with_anomalies.csv  calc_norm.py  cluster.ipynb  clustering_method.py  collect_representatives.py  create_Kvasir_evaluation.py  create_train_plots.py  crop_seeAI.py  deep_cluster.py  deep_k_means.py  dino.py  dinoCPY.py  drawClusters.py  evaluate_rotational_invariance.py  extract_stats.ipynb  feature_generator.py  generateEval.py  generateEval_Unsupervised.py  generate_tables.py  knn.py  model_name.py  noisyTS.py  performance_comparison_table_nmi_with_anomalies.tex  plot_evals.py  pretty_seeAI.py  seeai_datamodule.py  sortSEEAI.py  ssh-remote+gccg301.igd.fraunhofer.de:.inetloc  swav.py  tensorboard_Logs.py  test_endo_swav_model.pth  timeseries.ipynb  tmp.py  train.py  vision_transformer.py  (+2 more)
(+192 files in other folders)
