[tool.poetry]
name = "b-thesis"
version = "0.1.0"
description = "Bachelorthesis Pierre Bathoum"
authors = ["Pierre Bathoum <pierre.bathoum@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
notebook = "^7.1.3"
opencv-python = "^4.9.0.80"
ruptures = "^1.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
